# ant-simulation

./: .gitignore  .pre-commit-config.yaml  Readme.md  pyproject.toml
docs/: Research  Research.md  Tool.md  Validation.md  cele.md
simulation/: app.py  diamond.py  double_diamond.py  model.py  random_agent.py
